<resources>
    <string name="app_name">FilmHall</string>
    <string name="sort_popular">Popular</string>
    <string name="sort_top_rated">Top Rated</string>
    <string name="sort_favorites">Favorites</string>

    <string name="voter_rating">Voter Rating is %1$d</string>
    <string name="movie_trailer_button">Trailer</string>
    <string name="movie_reviews_button">Reviews</string>
    <string name="movie_trailer">http://api.themoviedb.org/3/movie/%1$d/videos?api_key=%2$s</string>
    <string name="movie_reviews">https://www.themoviedb.org/movie/%1$d/reviews</string>
    <string name="add_to_favorites">Add to Favorites</string>
</resources>
