<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/sort_popular"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:id="@+id/sort_by_popular" />
        <item
            android:title="@string/sort_top_rated"
            android:orderInCategory="2"
            app:showAsAction="never"
            android:id="@+id/sort_by_top_rated" />
        <item
            android:title="@string/sort_favorites"
            android:orderInCategory="3"
            app:showAsAction="never"
            android:id="@+id/sort_by_favorites" />
    </group>
</menu>